--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
   Perahu Ketinting yang rutin dan rencana pengembangan ekowisata hutan mangrove. Kehidupan masyarakat pesisir yang kental juga menambah
   keunikan Desa Saliki, menjadikannya salah satu permata tersembunyi di Muara Badak.</p>
 <div class="card text-bg-info mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
+  <div class="card-header">Informasi Desa</div>
   <div class="card-body">
-    <h5 class="card-title">Informasi Desa</h5>
+    <h5 class="card-title"></h5>
     <a class="card-text" href="https://www.instagram.com/desasaliki/" target="_blank">Instagram: desasaliki </a>
     <p style="text-align:justify">&nbsp;</p>
     <a class="card-text" href="http://www.facebook.com/kantordesa.saliki.1" target="_blank">Facebook: Desa Saliki </a>
