--- a/profil.html
+++ b/profil.html
@@ -52,7 +52,7 @@
 
 </p>
 <div class="col-md-4 text-center">
-          <img src="images/Pak_Kades.png" alt="Foto Anggota 1" class="img-fluid rounded-circle mb-3" style="width: 180px; height: 180px; object-fit: cover;">
+          <img src="images/Pak_Kades.png" alt="images/Pak_kades.png" class="img-fluid rounded-circle mb-3" style="width: 180px; height: 180px; object-fit: cover;">
           <h5>Saliansyah, S. Kom</h5>
           <p>Kepala Desa Saliki</p>
         </div>
